G1: Java VisualVM does not support G1 properly.

XMLWordPrintable

    • gc
    • b11
    • x86
    • generic
    • Not verified

        The page "Monitor" shows that "Heap size" and "Used heap" are both zeroes for G1.

        It is a not good for visualVM bundled with JDK.

        I've start visualVM for
        -->/net/vmsqe.russia/export/jdk/6/build/u20.old/linux-i586/bin/java -version
        java version "1.6.0_20-ea"
        Java(TM) SE Runtime Environment (build 1.6.0_20-ea-b02)
        Java HotSpot(TM) Server VM (build 17.0-b12, mixed mode)

              Assignee:
              Jon Masamitsu (Inactive)
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: