6946417: G1: Java VisualVM does not support G1 properly

Added counters for jstat

Reviewed-by: tonyp, jwilhelm, stefank, ysr, johnc